# Mailing-management-service-project

./: .env  README.md  pyproject.toml
config/: settings.py
mailing/: urls.py  views.py
