[tool.poetry]
name = "pythonproject-mailing"
version = "0.1.0"
description = ""
authors = ["AlexandraAvtaykina <justalexandra@mail.ru>"]
readme = "README.md"
packages = [{include = "pythonproject_mailing"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.17.2"
django-crontab = "^0.7.1"
crontab = "^1.0.1"
django-crispy-forms = "^2.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
